@@ -629,7 +629,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|TOKENIZED
+name|ANALYZED
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -660,7 +660,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|UN_TOKENIZED
+name|NOT_ANALYZED
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -690,7 +690,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|UN_TOKENIZED
+name|NOT_ANALYZED
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -716,7 +716,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|TOKENIZED
+name|ANALYZED
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -789,7 +789,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|NO_NORMS
+name|NOT_ANALYZED_NO_NORMS
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -821,7 +821,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|NO_NORMS
+name|NOT_ANALYZED_NO_NORMS
 argument_list|)
 argument_list|)
 expr_stmt|;
