@@ -398,64 +398,6 @@ return|return
 literal|null
 return|;
 block|}
-comment|/** Returns an Enumeration of all the fields in a document.    * @deprecated use {@link #getFields()} instead    */
-DECL|method|fields
-specifier|public
-specifier|final
-name|Enumeration
-argument_list|<
-name|Fieldable
-argument_list|>
-name|fields
-parameter_list|()
-block|{
-return|return
-operator|new
-name|Enumeration
-argument_list|<
-name|Fieldable
-argument_list|>
-argument_list|()
-block|{
-specifier|final
-name|Iterator
-argument_list|<
-name|Fieldable
-argument_list|>
-name|iter
-init|=
-name|fields
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-specifier|public
-name|boolean
-name|hasMoreElements
-parameter_list|()
-block|{
-return|return
-name|iter
-operator|.
-name|hasNext
-argument_list|()
-return|;
-block|}
-specifier|public
-name|Fieldable
-name|nextElement
-parameter_list|()
-block|{
-return|return
-name|iter
-operator|.
-name|next
-argument_list|()
-return|;
-block|}
-block|}
-return|;
-block|}
 comment|/** Returns a List of all the fields in a document.    *<p>Note that fields which are<i>not</i> {@link Fieldable#isStored() stored} are    *<i>not</i> available in documents retrieved from the    * index, e.g. {@link Searcher#doc(int)} or {@link    * IndexReader#document(int)}.    */
 DECL|method|getFields
 specifier|public
@@ -862,7 +804,7 @@ name|add
 argument_list|(
 name|field
 operator|.
-name|binaryValue
+name|getBinaryValue
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -943,7 +885,7 @@ condition|)
 return|return
 name|field
 operator|.
-name|binaryValue
+name|getBinaryValue
 argument_list|()
 return|;
 block|}
