@@ -849,7 +849,7 @@ literal|false
 argument_list|,
 name|field
 operator|.
-name|getOmitTf
+name|getOmitTermFreqAndPositions
 argument_list|()
 argument_list|)
 decl_stmt|;
@@ -932,7 +932,7 @@ literal|false
 argument_list|,
 name|field
 operator|.
-name|getOmitTf
+name|getOmitTermFreqAndPositions
 argument_list|()
 argument_list|)
 expr_stmt|;
