@@ -517,7 +517,7 @@ literal|false
 argument_list|,
 name|field
 operator|.
-name|getOmitTf
+name|getOmitTermFreqAndPositions
 argument_list|()
 argument_list|)
 expr_stmt|;
