@@ -3107,7 +3107,7 @@ name|Field
 operator|.
 name|Index
 operator|.
-name|UN_TOKENIZED
+name|NOT_ANALYZED
 argument_list|)
 argument_list|)
 expr_stmt|;
